Add NEWS entry for change to matchArgs
git-svn-id: https://svn.r-project.org/R/trunk@51233 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -406,6 +406,11 @@ BUG FIXES
     o	fisher.test() no longer gives a P-value *very* slightly > 1,
 	in some borderline cases.
 
+    o	Internal function matchArgs no longer modifies the general
+	purpose bits of the SEXPs that make up the formals list of R
+	functions.  This fixes an invalid error message that would
+	occur when a garbage collection triggered a second call to
+	matchArgs for the same function via a finalizer.
 
 
 
