updates on primitives
git-svn-id: https://svn.r-project.org/R/trunk@51237 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-ints.texi
+++ b/doc/manual/R-ints.texi
@@ -1979,7 +1979,7 @@ accessed directly.  Note that primitive functions make no use of @R{}
 code, and hence are very different from the usual interpreted functions.
 In particular, @code{args}, @code{formals} and @code{body} return
 @code{NULL} for such objects, and argument matching is purely positional
-(with two exceptions described below).  
+(with a few exceptions described below).  
 
 The list of primitive functions is subject to change; currently, it
 includes the following.
@@ -1993,9 +1993,14 @@ exist as ``primitive'' functions in @R{}:
 @example
 @group
 @{       (         if     for      while  repeat  break  next
-return  function  quote  on.exit
+return  function  quote  on.exit   switch
 @end group
 @end example
+
+@noindent
+@code{switch} was made primitive in @R{} 2.11.0 to ensure that
+@code{EXPR} was always matched to its first argument.
+
 
 @item
 Language elements and basic @emph{operator}s (i.e., functions usually
@@ -2140,7 +2145,9 @@ lazyLoadDBfetch
 
 @noindent
 @code{round}, @code{signif}, @code{rep} and @code{seq.int} manage their
-own argument matching and so do work in the standard way.
+own argument matching and so do work in the standard way.  Note that
+@code{.C} (and the other interface functions) always match @code{name}
+to their first argument, and so need to avoid partial matching.
 
 @end enumerate
 
