--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -3710,12 +3710,12 @@ F77=sunf95
 FFLAGS="-O5 -libmil -nofstore"
 FPICFLAGS=-Kpic
 CXX=sunCC
-CXXFLAGS="-xO5 -xlibmil -nofstore"
+CXXFLAGS="-xO5 -xlibmil -nofstore -features=tmplrefstatic"
 CXXPICFLAGS=-Kpic
 FC=sunf95
 FCFLAGS=$FFLAGS
 FCPICFLAGS=-Kpic
-LDFLAGS=-L/opt/sunstudio12/lib/amd64
+LDFLAGS=-L/opt/sunstudio12.1/rtlibs/amd64
 SHLIB_LDFLAGS=-shared
 SHLIB_CXXLDFLAGS="-G -lCstd"
 SHLIB_FCLDFLAGS=-G
@@ -3727,8 +3727,11 @@ SAFE_FFLAGS="-O5 -libmil"
 @option{-fast}: see the warnings under Solaris.
 
 The resulting build of @R{} was not quite as fast as that built with
-@command{gcc}@tie{}4.3.2 at @samp{-O3}.
+@command{gcc}@tie{}4.4.3 at @samp{-O3}.
 
+Others have found on at least some versions of @cputype{i386} Linux that
+the configure flag @option{--disable-largefile} was needed (since
+@file{glob.h} presumed @command{gcc} was being used).
 
 @node FreeBSD, Mac OS X, Linux, Platform notes
 @section FreeBSD
