port r51238 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@51241 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -122,6 +122,8 @@ BUG FIXES
 
     o	plot(ecdf(), log="x") no longer gives a wrong warning.
 
+    o	read.fwf() works again when 'file' is a connection.
+
 
 
 		CHANGES IN R VERSION 2.10.1
