document in source files which primitives/.Internal are 'special' make zero-arg primitives consistently builtin and not special, and check arity list the specials (and some reasons) in R-ints update now switch() is primitive
git-svn-id: https://svn.r-project.org/R/trunk@51245 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-ints.texi
+++ b/doc/manual/R-ints.texi
@@ -895,9 +895,20 @@ calls but specials are not.} between special and builtin functions is
 that the arguments of specials are not evaluated before the C code is
 called, and those of builtins are.  In each case positional matching of
 arguments is used.  Note that being a special/builtin is separate from
-being primitive or @code{.Internal}: @code{function} is a special
-primitive, @code{+} is a builtin primitive, @code{switch} is a special
+being primitive or @code{.Internal}: @code{quote} is a special
+primitive, @code{+} is a builtin primitive, @code{cbind} is a special
 @code{.Internal} and @code{grep} is a builtin @code{.Internal}.
+
+Special functions are much rarer than builtins: the special primitives
+are (aparts from language elements implemented as primitives) currently
+@code{.Internal}, @code{UseMethod}, @code{c}, @code{call},
+@code{expression}, @code{log}, @code{missing}, @code{on.exit},
+@code{quote}, @code{rep}, @code{round}, @code{seq.int}, @code{signif}
+and @code{substitute}, and the special @code{.Internals} are
+@code{NextMthod}, @code{Recall}, @code{cbind}, @code{eapply},
+@code{lapply}, @code{rbind}, @code{withVisible} and @code{vapply}.
+(Some of these primitives, e.g.@: @code{log}, are special to allow
+default values to be given to missing arguments.)
 
 @cindex generic, internal
 @findex DispatchOrEval
