use matchArgs for argument matching in browser
git-svn-id: https://svn.r-project.org/R/trunk@51246 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-ints.texi
+++ b/doc/manual/R-ints.texi
@@ -900,7 +900,7 @@ primitive, @code{+} is a builtin primitive, @code{cbind} is a special
 @code{.Internal} and @code{grep} is a builtin @code{.Internal}.
 
 Special functions are much rarer than builtins: the special primitives
-are (aparts from language elements implemented as primitives) currently
+are (apart from language elements implemented as primitives) currently
 @code{.Internal}, @code{UseMethod}, @code{c}, @code{call},
 @code{expression}, @code{log}, @code{missing}, @code{on.exit},
 @code{quote}, @code{rep}, @code{round}, @code{seq.int}, @code{signif}
@@ -2110,6 +2110,9 @@ browser  proc.time  gc.time
 tracemem retracemem untracemem
 @end group
 @end example
+@noindent
+@code{browser} manages its own argument matching and so works in the
+standard way.
 
 @end enumerate
 
