make the changes in rev. 51209 the default
git-svn-id: https://svn.r-project.org/R/trunk@51248 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -317,6 +317,11 @@ DEPRECATED & DEFUNCT
 
     o	Use of multiple arguments to return() is now defunct.
 
+    o	The old MethodsList metadata objects have been superceded
+        since 2.8 by hash tables (environments) and are being phased
+        out for efficiency.  In the present stage only stubs are generated and a
+        warning issued if these are accessed.  Shortly none will be generated.
+
 
 INSTALLATION
 
