document change to interactive/nargs
git-svn-id: https://svn.r-project.org/R/trunk@51249 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -299,6 +299,10 @@ NEW FEATURES
 	the first argument and there is no danger of partial matching
 	to later named arguments.
 
+    o	Functions interactive() and nargs() now check that they are
+	called with no arguments rather than ignoring any arguments
+	supplied.
+
 
 DEPRECATED & DEFUNCT
 
