--- a/NEWS
+++ b/NEWS
@@ -321,10 +321,11 @@ DEPRECATED & DEFUNCT
 
     o	Use of multiple arguments to return() is now defunct.
 
-    o	The old MethodsList metadata objects have been superceded
-        since 2.8 by hash tables (environments) and are being phased
-        out for efficiency.  In the present stage only stubs are generated and a
-        warning issued if these are accessed.  Shortly none will be generated.
+    o	In the 'methods' package, the old MethodsList metadata objects
+	have been superseded since R 2.8.0 by hash tables
+	(environments) and are being phased out for efficiency.  In
+	the present stage only stubs are generated and a warning
+	issued if these are accessed: shortly none will be generated.
 
 
 INSTALLATION
