Make which .Internal for simple vector case
For long vectors, this provides a 10x speed up.

git-svn-id: https://svn.r-project.org/R/trunk@51261 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -310,6 +310,10 @@ NEW FEATURES
 	they are called with no arguments rather than ignoring any
 	arguments supplied.
 
+    o	base::which() uses a new .Internal function when arr.ind is
+	FALSE resulting in a 10x speedup.  Thanks to Patrick Aboyoun
+	for implementation suggestions.
+
 
 DEPRECATED & DEFUNCT
 
