Add missing NEWS entry for fixes and enhancements to gsub
git-svn-id: https://svn.r-project.org/R/trunk@51262 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -433,7 +433,9 @@ BUG FIXES
 	occur when a garbage collection triggered a second call to
 	matchArgs for the same function via a finalizer.
 
-
+    o	gsub could crash from a stack overflow for very long strings due
+	to temporary data being allocated on the stack.  Also, gsub
+	with fixed=TRUE is now considerably faster.
 
 
 	**************************************************
