--- a/NEWS
+++ b/NEWS
@@ -286,7 +286,7 @@ NEW FEATURES
     o	pchisq(ncp =, log.p = TRUE) is more accurate for probabilities
 	near one.  E.g. pchisq(80, 4, ncp=1, log.p=TRUE).  (Maybe what
 	was meant in PR#14126.)
-	
+
     o	maintainer() has been added, to give convenient access to the
 	name of the maintainer of a package (contributed by David
 	Scott).
@@ -576,6 +576,9 @@ BUG FIXES
     o	plot(ecdf(), log="x") no longer gives an incorrect warning.
 
     o	read.fwf() works again when 'file' is a connection.
+
+    o	R now works correctly with filesystem paths longer than 255
+	characters on platforms that support it (PATH_MAX; PR#14228).
 
 
 
