--- a/NEWS
+++ b/NEWS
@@ -274,7 +274,7 @@ NEW FEATURES
 	archives available have been split, with a new option of
 	"Rhelp10" for those from 2010.
 
-    o	New function raster() in the 'graphics' package for drawing
+    o	New function rasterImage() in the 'graphics' package for drawing
         raster images.
 
     o	stats:::extractAIC.coxph() now omits aliased terms when computing
