Prevent do_listfiles race from causing a write beyond allocation
The list_files code now checks the length of the allocated result
vector and returns when it is full.  This can occur if files are added
to the filesystem between the call to count_files and list_files.

Thanks to Alistair Gee who reported this on the R-devel mailing list.

git-svn-id: https://svn.r-project.org/R/trunk@51284 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -449,7 +449,8 @@ BUG FIXES
 	interactive(), nargs() and proc.time(), did not check that
 	they were called with the correct number of arguments.
 
-
+    o	A race condition in list.files() has been fixed to prevent
+	code from writing beyond an allocated vector.
 
 
 	**************************************************
