correct blatent lie by reporter of PR#14228
git-svn-id: https://svn.r-project.org/R/trunk@51285 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -578,8 +578,9 @@ BUG FIXES
 
     o	read.fwf() works again when 'file' is a connection.
 
-    o	R now works correctly with filesystem paths longer than 255
-	characters on platforms that support it (PATH_MAX; PR#14228).
+    o	Starting R in a directory whose name is longer than 255 bytes
+	finds the startup files on platforms that support it
+	(PATH_MAX; PR#14228).
 
 
 
